Fix trouble setting recording parameters.

Addresses PR 48394.

This commit was approved by christos@